--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -8,11 +8,13 @@
     <body>
         <header>
             <h1>SAMURAIニュース</h1>
-            <a href="https://www.sejuku.net/">ホーム</a>
-            <a href="https://www.sejuku.net/">社会</a>
-            <a href="https://www.sejuku.net/">経済</a>
-            <a href="https://www.sejuku.net/">スポーツ</a>
-            <a href="https://www.sejuku.net/">テクノロジー</a>
+            <nav>
+                <a href="https://www.sejuku.net/">ホーム</a>
+                <a href="https://www.sejuku.net/">社会</a>
+                <a href="https://www.sejuku.net/">経済</a>
+                <a href="https://www.sejuku.net/">スポーツ</a>
+                <a href="https://www.sejuku.net/">テクノロジー</a>
+            </nav>
         </header>
         <main>
             <article>
